--- a/src/css/tangerine.less
+++ b/src/css/tangerine.less
@@ -37,7 +37,7 @@ body { margin: 0; font-size: 100%; line-height: 1.231; }
 
 body, button, input, select, textarea { font-family: sans-serif; color: #222; -webkit-tap-highlight-color: rgba(0,0,0,0);}
 
-body.server 
+body.server
 {
   font-family: "Helvetica Std", Helvetica, Arial, sans-serif;
 }
@@ -306,7 +306,7 @@ textarea[contenteditable] {-webkit-appearance: none;}
  * Parametric mixins
  */
 
-.border-radius (@radius) 
+.border-radius (@radius)
 {
   border-radius: @radius;
   -moz-border-radius: @radius;
@@ -381,7 +381,7 @@ p
 
 section
 {
-  .box-sh( 0 2px, 2.5px, rgba(0,0,0,0.1)); 
+  .box-sh( 0 2px, 2.5px, rgba(0,0,0,0.1));
   padding: 10px;
   margin-bottom: 10px;
 }
@@ -390,7 +390,7 @@ body.flash{
   background-color: @yellow;
 }
 
-.icon 
+.icon
 {
   cursor: pointer;
   margin-right: 10px;
@@ -407,7 +407,7 @@ div.disabled
   }
 }
 
-body.class 
+body.class
 {
   table.grid
   {
@@ -424,20 +424,20 @@ table.grid
 
   clear: both;
   width: 101%;
-  
+
   td
   {
     padding: 0;
     margin: 0;
     border: 0;
   }
-  
+
   .grid_element
   {
     width: 95%;
     border: none;
     outline: none;
-    font-family: Gentium, Tahoma, Monaco, sans-serif;
+    font-family: Andika, Gentium, Tahoma, Monaco, sans-serif;
     cursor: pointer;
     text-align:center;
     background: @grey-1;
@@ -530,7 +530,7 @@ button.time
   &:active
   {
     background-color: @orange-3;
-  }  
+  }
 }
 
 
@@ -661,14 +661,14 @@ progress
     display: inline-block;
     border-color: @green;
   }
-  
+
   .not_saved
   {
     border-color: @grey-1 !important;
     color: @grey-1;
     font-weight: bold;
   }
-  
+
 }
 
 #watermark
@@ -770,7 +770,7 @@ progress
 
     label
     {
-      color: black;  
+      color: black;
       background: none !important;
       font-weight: normal;
       margin: 0;
@@ -891,7 +891,7 @@ span.delete_confirm
   #prototype_wrapper {
     .print-page {
       /* A4 */
-      size: 297mm 210mm; 
+      size: 297mm 210mm;
       height: 297mm;
       width: 297mm;
       margin: 0;
@@ -921,7 +921,7 @@ span.delete_confirm
     border-collapse: separate;
     border-spacing:10px;
   }
-  td.marking-area, 
+  td.marking-area,
   .free-text {
     margin: 10px;
     width: 14cm;
@@ -1002,7 +1002,7 @@ span.delete_confirm
 {
   cursor: pointer;
   vertical-align: middle;
-  
+
   .sp_right;
 }
 
@@ -1025,7 +1025,7 @@ ul.assessment_list
   text-indent: 0px;
   margin: 0px;
   padding-left: 0px;
-  
+
   li.AssessmentListElementView
   {
     list-style: none;
@@ -1074,7 +1074,7 @@ ul.assessment_list
   {
     color: @grey;
   }
-  
+
   .assessment_menu
   {
     margin-left: 55px;
@@ -1102,12 +1102,12 @@ ul.assessment_list
   border: 0;
   cursor: pointer !important;
   margin: 0 6px 0 0;
-  a 
+  a
   {
     display: block;
     height: 36px;
   }
-  button 
+  button
   {
     display: block;
     height: 36px;
@@ -1189,7 +1189,7 @@ ul.assessment_list
  */
 
 
- 
+
 div.assessment_edit_view
 {
 
@@ -1207,7 +1207,7 @@ div.assessment_edit_view
       padding: 5px 0;
       vertical-align: middle;
     }
-    
+
   }
 
   a
@@ -1218,7 +1218,7 @@ div.assessment_edit_view
     padding: 0 !important;
     -webkit-appearance: none !important;
   }
-  
+
 
   input
   {
@@ -1283,7 +1283,7 @@ div.subtest_edit
     padding-right: 10px;
     vertical-align: middle;
   }
-  
+
   .enumerator_help_preview,
   .student_dialog_preview,
   .transition_comment_preview
@@ -1299,7 +1299,7 @@ div.subtest_edit
   overflow-y: scroll;
   margin: 0 0 0 -5px;
   width: 125%;
-  
+
   //border: 4px solid red;
 }
 
@@ -1324,7 +1324,7 @@ label.ui-button
 /*
  * Question
  */
- 
+
 table.basic_info
 {
     .small_grey;
@@ -1352,7 +1352,7 @@ table.basic_info
   border: 2px solid @grey-1;
 
 }
- 
+
 .question
 {
   position:relative;
@@ -1374,27 +1374,27 @@ table.basic_info
     display: inline;
     margin: 0 10px 0 0;
   }
-  
+
   .option_label_value
   {
     padding: 5px;
     display:inline-block;
     vertical-align: middle;
   }
-  
+
   ul
   {
     background: @orange-4;
     padding: 10px;
   }
-  
+
   li
   {
     .box-sh(5px, 5px, 10px, rgba(0,0,0,0.1));
     margin: 10px 0;
     background: white;
   }
-  
+
   button
   {
     margin: 10px;
@@ -1407,7 +1407,7 @@ table.basic_info
     color: black;
     margin: 10px 5px 0;
   }
-  
+
   .hint
   {
     font-size: 20px;
@@ -1517,13 +1517,13 @@ table.basic_info
 #csv_view
 {
   font-size: 12px;
-  
+
   textarea
   {
     height: 200px;
     font-family: "andale mono", "courier new", "courier", monospace;
   }
-  
+
 }
 
 /*
@@ -1649,7 +1649,7 @@ button.navigation
   {
     background-color: @orange-3;
   }
-  
+
   &:hover
   {
     background-color: @orange-1;
@@ -1685,7 +1685,7 @@ body.server
 .command,
 .navigation
 {
-  
+
   a, a:visited, a:hover
   {
     text-decoration: none;
@@ -1696,7 +1696,7 @@ body.server
   {
     background-color: @orange-3;
   }
-  
+
   &:hover
   {
     background-color: @orange-4;
@@ -1739,7 +1739,7 @@ body.server
   {
     background-color: @orange-3;
   }
-  
+
   &:hover
   {
     background-color: @orange-4;
@@ -1789,7 +1789,7 @@ label.no_help
     width: 5em;
     margin: 0 0 10px;
   }
-  
+
 }
 
 .id
@@ -1839,7 +1839,7 @@ label.no_help
     @media only screen and (max-width : 450px) {
       font-size: @h2;
     }
-    
+
     font-size: @h1;
     border: 1px solid #888;
     padding: 5px !important;
@@ -1856,7 +1856,7 @@ label.no_help
 
     width: 99%;
 
-    @media only screen and (max-width : 450px) { 
+    @media only screen and (max-width : 450px) {
       width: 97%;
       font-size: @h2;
     }
@@ -1874,7 +1874,7 @@ label.no_help
       background-color: @orange-3;
     }
   }
-  
+
   #login_logo
   {
     @media only screen and (max-width : 450px) { width: 75%; height: auto; }
@@ -1962,7 +1962,7 @@ label.no_help
 }
 
 
-.messages 
+.messages
 {
 
   font-weight: bold;
@@ -2231,7 +2231,7 @@ body[rtl]
   {
 
     border: 2px solid white !important;
-    
+
     thead
     {
       position:relative;
@@ -2252,7 +2252,7 @@ body[rtl]
 }
 
 /*
- * Users Menu View 
+ * Users Menu View
  */
 
 .UsersMenuView
@@ -2264,7 +2264,7 @@ body[rtl]
   .command
   {
     padding-left: 10px !important;
-    padding-right: 10px !important; 
+    padding-right: 10px !important;
   }
   th
   {
@@ -2496,8 +2496,8 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 .ui-button { -webkit-appearance:none; display: inline-block; position: relative; padding: 0; margin-right: 10px; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
-.ui-button-icons-only { width: 3.4em; } 
-button.ui-button-icons-only { width: 3.7em; } 
+.ui-button-icons-only { width: 3.4em; }
+button.ui-button-icons-only { width: 3.7em; }
 
 /*button text element */
 .ui-button .ui-button-text { display: block; line-height: 1;font-size:22px; border:2px solid white}
