remove selectability for accidental highlights

--- a/src/css/tangerine.less
+++ b/src/css/tangerine.less
@@ -252,6 +252,11 @@ textarea[contenteditable] {-webkit-appearance: none;}
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
 
+.unselectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 
 
 
